# adt_opt

./: CMakeLists.txt  adt_problem.out  package.xml
include/: optimization_constants.hpp
include/adt/: adt_snopt_wrapper.hpp  optimization_constants.hpp
include/adt/contacts/: adt_contact_main.hpp  adt_draco_contact_heel.hpp  adt_draco_contact_toe.hpp
include/adt/containers/: adt_constraint_list.hpp  adt_contact_list.hpp  adt_opt_variable.hpp  adt_opt_variable_manager.hpp
include/adt/hard_constraints/: adt_com_kinematic_constraint.hpp  adt_constraint_main.hpp  adt_dynamics_constraint.hpp  adt_dynamics_linear_back_euler_time_integration_constraint.hpp  adt_floor_2d_contact_lcp_constraint.hpp  adt_friction_cone_2d_constraint.hpp  adt_linear_back_euler_time_integration_constraint.hpp  adt_position_kinematic_constraint.hpp  adt_timestep_constraint.hpp
include/adt/objective_functions/: adt_jump_objective_function.hpp  adt_objective_function_main.hpp
include/adt/optimization_problems/: adt_opt_jump_problem.hpp  adt_opt_problem_main.hpp
include/adt/optimization_variable_limits/: adt_jump_variable_limits.hpp
include/draco_actuator_model/: DracoActuatorModel.hpp
include/draco_combined_dynamics_model/: draco_combined_dynamics_model.hpp
src/: implementation_to_dos.txt
src/adt/: adt_snopt_wrapper.cpp
src/adt/contacts/: adt_draco_contact_heel.cpp  adt_draco_contact_toe.cpp
src/adt/containers/: adt_constraint_list.cpp  adt_contact_list.cpp  adt_opt_variable.cpp  adt_opt_variable_manager.cpp
src/adt/hard_constraints/: adt_com_kinematic_constraint.cpp  adt_dynamics_constraint.cpp  adt_dynamics_linear_back_euler_time_integration_constraint.cpp  adt_floor_2d_contact_lcp_constraint.cpp  adt_friction_cone_2d_constraint.cpp  adt_linear_back_euler_time_integration_constraint.cpp  adt_position_kinematic_constraint.cpp  adt_timestep_constraint.cpp
src/adt/objective_functions/: adt_jump_objective_function.cpp
src/adt/optimization_problems/: adt_opt_jump_problem.cpp
src/adt/optimization_variable_limits/: adt_jump_variable_limits.cpp
src/draco_actuator_model/: DracoActuatorModel.cpp
src/draco_combined_dynamics_model/: draco_combined_dynamics_model.cpp
src/hopper_dynamic_model/: HopperModel.cpp  HopperModel.hpp
src/optimizations/: com_jump.spc  first_successful_hop.txt  fort.11  fort.13  fort.14  fort.15  fort.16  fort.17  fort.18  jump.spc  main_jump_opt.cpp  second_jump._mid_solve.txt  small_jump.spc
src/small_tests/: test_adt_containers.cpp  test_draco_constraints_obj.cpp  test_draco_model.cpp  test_jump_prob_object.cpp
